--- a/_teaching/comp3121-9101.md
+++ b/_teaching/comp3121-9101.md
@@ -2,7 +2,7 @@
 title: "Algorithms and Programming Techniques"
 collection: teaching
 type: "Undergraduate course"
-permalink: /teaching/comp3121-9101
+permalink: /site/teaching/comp3121-9101
 venue: "University of New South Wales, Computer Science and Engineering"
 date: 2021
 location: "Sydney, Australia"
